Removed 'All rights reserved' from Citrix copyright statements

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,8 +2,7 @@
 #
 # Makefile.am:
 #
-# Copyright (c) 2011 Citrix Systems Inc.,
-# All rights reserved.
+# Copyright (c) 2011 Citrix Systems Inc.
 #
 # $Id:$
 #
