--- a/src/edid-head.h.in
+++ b/src/edid-head.h.in
@@ -1,8 +1,7 @@
 /*
  * edid.h.in:
  *
- * Copyright (c) 2011 Citrix Systems Inc.,
- * All rights reserved.
+ * Copyright (c) 2011 Citrix Systems Inc.
  *
  */
 
