--- a/configure.in
+++ b/configure.in
@@ -2,8 +2,7 @@ dnl
 dnl
 dnl configure.in:
 dnl
-dnl Copyright (c) 2011 Citrix Systems Inc.,
-dnl All rights reserved.
+dnl Copyright (c) 2011 Citrix Systems Inc.
 dnl
 dnl $Id:$
 dnl
