--- a/libedid-config.src.in
+++ b/libedid-config.src.in
@@ -2,8 +2,7 @@
 #
 # libedid-config.src.in:
 #
-# Copyright (c) 2011 Citrix Systems Inc.,
-# All rights reserved.
+# Copyright (c) 2011 Citrix Systems Inc.
 #
 # $Id:$
 #
