--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,8 +1,7 @@
 #
 # Makefile.am:
 #
-# Copyright (c) 2011 Citrix Systems Inc.,
-# All rights reserved.
+# Copyright (c) 2011 Citrix Systems Inc.
 #
 # $Id:$
 #
